# passphrase_builder

./: .gitignore  Cargo.toml  README.md  copy.ps1  package.json  rollup.config.js
css/: passphrase_builder.css
generateStrings/: generateStrings.py
release/: passphrase_builder.js
scss/: passphrase_builder.scss
src/: lib.rs  main.rs  word.rs
static/: index.html  passphrase_builder.css
