[package]
name = "passphrase_builder"
version = "0.1.0"
authors = ["Mischa MacLeod <mischa.macleod@gmail.com>"]
edition = "2018"
[[bin]]
name = "passphrase_builder"
path = "src/main.rs"

[dependencies]
stdweb = "0.4"
yew = "0.6.0"
rand = "0.7.0"

[lib]
name = "passphrase_builder_lib"
path = "src/lib.rs"